--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hola</title>
+<title>Lunar ander Jordan</title>
+<meta name="juego de cohete" content="">
 <link rel="stylesheet" media='screen and (min-width: 961px)' type="text/css" href="horizontal.css">
 <link rel="stylesheet" media='screen and (max-width: 960px)' type="text/css" href="mobil.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
