--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Hola</title>
-<link rel="stylesheet" media='screen and (min-width: 961px)' type="text/css" href="horizontal.css">
-<link rel="stylesheet" media='screen and (max-width: 960px)' type="text/css" href="mobil.css">
+<link rel="stylesheet" media='screen and (min-width: 961px)' type="text/css" href="/horizontal.css">
+<link rel="stylesheet" media='screen and (max-width: 960px)' type="text/css" href="/mobil.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
