--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </div><div class="b">
  .
  </div><div class="c">
- <img src="img/info.png" id="info" alt="img info">
+ 
+ <a href="infojugar.html"><img src="img/info.png" id="info" alt="img info"></a>
  <img src="img/reset.png" id="reset" alt="img reset1">
  <img src="img/pausa.png" id="pausa" alt="img pausa1"></div>
  
